Sign Up api calling and near by page design

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -14,36 +14,38 @@
   "terms": "شروط",
   "feqs": "أسئلة وأجوبة",
   "logout": "تسجيل خروج",
-  "regular_account": "REGULAR ACCOUNT",
-  "barber_account": "BARBER ACCOUNT",
-  "Name": "Full Name",
-  "Email": "Email",
-  "UserName": "UserName",
-  "shop": "Barber Shop",
-  "Password": "Password",
-  "Phone": "Phone",
-  "Verification": "Verification",
-  "Send": "Send",
-  "Submit": "Submit",
-  "PressSend": "Press send to get verification number",
-  "Valid_phone": "Please enter valid phone number",
-  "Please_Enter": "Please Enter",
-  "Invalid" : "Invalid",
-  "tandc": "By clicking Submit you're agreeing to the ",
-  "tandct": "Terms Of Services ",
-  "account": "If you don't have an account ",
-  "signup": "Sign Up . ",
-  "barber_essential": "BARBER ESSENTIALS",
-  "our_shop": "OUR SHOP",
-  "back_shop": "BACK TO SHOP",
-  "purches": "PURCHASE",
-  "incorrect_credential": "Incorrect Credentials",
-  "make_appoint":"MAKE APPOINTMENT",
-  "Thanks_choose": "Thank you for choosing",
-  "See_you": "SEE YOU",
-  "sure": "Are you sure?",
-  "exit_msg": "Do you want to exit an App",
-  "NO": "NO",
-  "YES": "YES"
+  "regular_account": "حساب عادي",
+  "barber_account": "حساب باربر",
+  "Name": "الاسم الكامل",
+  "Email": "البريد الإلكتروني",
+  "UserName": "اسم المستخدم",
+  "shop": "الحلاق",
+  "Password": "كلمه السر",
+  "Phone": "هاتف",
+  "Verification": "التحقق",
+  "Send": "إرسال",
+  "Submit": "إرسال",
+  "PressSend": "اضغط على إرسال للحصول على رقم التحقق",
+  "Valid_phone": "الرجاء إدخال رقم هاتف صحيح",
+  "Please_Enter": "تفضل",
+  "Invalid" : "غير صالحة",
+  "tandc": "بالنقر فوق إرسال ، فأنت توافق على",
+  "tandct": "شروط الخدمة ",
+  "account": "إذا كنت لا تملك حساب",
+  "signup": "سجل .",
+  "barber_essential": "أساسيات الحلاق",
+  "our_shop": "محلنا",
+  "back_shop": "العودة إلى المتجر",
+  "purches": "عملية الشراء",
+  "incorrect_credential": "أوراق غير صحيحة",
+  "make_appoint":"حدد موعدا",
+  "Thanks_choose": "شكرا لاختيارك",
+  "See_you": "أراك لاحقا",
+  "sure": "هل أنت واثق؟",
+  "exit_msg": "هل تريد الخروج من التطبيق",
+  "NO": "لا",
+  "YES": "نعم",
+  "TAPERED_USER_NEAR": "TAPERED USERS NEAR ME",
+  "SEARCH": "SEARCH"
 
 }
