Set Flow Of add appointment according to website(Design Correction in Product detail and Appointment ) , Payment Gateway Integration myfatoorah .

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -45,14 +45,41 @@
   "exit_msg": "هل تريد الخروج من التطبيق",
   "NO": "لا",
   "YES": "نعم",
-  "TAPERED_USER_NEAR": "TAPERED USERS NEAR ME",
-  "SEARCH": "SEARCH",
-  "Description": "DESCRIPTION",
-  "review": "REVIEW",
-  "more_offers": "MORE OFFERS",
-  "store_poliecies": "STORE POLICIES",
-  "select_date": "SELECT AVAILABLE DATE",
-  "selected_date": "SELECTED DATE",
-  "account_head": "MY ACCOUNT"
-
+  "TAPERED_USER_NEAR": "المستخدمين المدبب بالقرب مني",
+  "SEARCH": "بحث",
+  "Description": "وصف",
+  "review": "مراجعة",
+  "more_offers": "المزيد من العروض",
+  "store_poliecies": "سياسات المتجر",
+  "select_date": "حدد التاريخ المتاح",
+  "selected_date": "التاريخ المحدد",
+  "account_head": "حسابي",
+  "personal_info": "معلومات شخصية",
+  "bill_add": "عنوان وصول الفواتير",
+  "ship_add": "عنوان الشحن",
+  "country": "بلد",
+  "state": "حالة",
+  "city": "مدينة",
+  "zipcode": "رمز بريدي",
+  "address": "عنوان",
+  "email": "البريد الإلكتروني",
+  "phone": "هاتف",
+  "firstName": "الاسم الاول",
+  "lastName": "الكنية",
+  "change_language": "تغيير اللغة",
+  "store_des": "وصف المتجر",
+  "home": "الصفحة الرئيسية",
+  "al_account": "هل لديك حساب",
+  "signin": "تسجيل الدخول . ",
+  "gallery": "صالة عرض",
+  "add_product": "أضف منتج",
+  "back_shop": "العودة إلى المتجر",
+  "pro_name": "اسم المنتج",
+  "pro_price": "سعر المنتج",
+  "des": "وصف",
+  "srt_des": "وصف قصير",
+  "add_pro": "أضف منتج",
+  "fetch_cat": "اختر الفئة",
+  "del_title": "هل تريد حذف هذا المنتج؟",
+  "del_msg": "اضغط على نعم للحذف ..."
 }
