--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,7 +15,6 @@
   "feqs": "FAQS",
   "logout": "LOGOUT",
   "regular_account": "REGULAR ACCOUNT",
-  "barber_account": "BARBER ACCOUNT",
   "Name": "Full Name",
   "Email": "Email",
   "UserName": "UserName",
@@ -24,7 +23,7 @@
   "shop": "Barber Shop",
   "Verification": "Verification",
   "Send": "Send",
-  "Submit": "Submit",
+  "Submit": "SUBMIT",
   "PressSend": "Press send to get verification number",
   "Valid_phone": "Please enter valid phone number",
   "Please_Enter": "Please Enter",
@@ -53,7 +52,33 @@
   "store_poliecies": "STORE POLICIES",
   "select_date": "SELECT AVAILABLE DATE",
   "selected_date": "SELECTED DATE",
-  "account_head": "MY ACCOUNT"
-
-
+  "account_head": "MY ACCOUNT",
+  "personal_info": "PERSONAL INFO",
+  "bill_add": "BILLING ADDRESS",
+  "ship_add": "SHIPPING ADDRESS",
+  "country": "Country",
+  "state": "State",
+  "city": "City",
+  "zipcode": "Zipcode",
+  "address": "Address",
+  "email": "Email",
+  "phone": "Phone",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "change_language": "CHANGE LANGUAGE",
+  "store_des": "STORE DESCRIPTION",
+  "home": "HOME",
+  "al_account": "Already have an account ",
+  "signin": "Sign In . ",
+  "gallery": "GALLERY",
+  "add_product": "ADD PRODUCT",
+  "back_shop": "BACK TO SHOP",
+  "pro_name": "Product Name",
+  "pro_price": "Product Price",
+  "des": "Description",
+  "srt_des": "Short Description",
+  "add_pro": "Add Product",
+  "fetch_cat": "Select Category",
+  "del_title": "Do you want to delete this product?",
+  "del_msg": "Press Yes to delete..."
 }
