Payment Option Selection online and offline

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -15,7 +15,6 @@
   "feqs": "أسئلة وأجوبة",
   "logout": "تسجيل خروج",
   "regular_account": "حساب عادي",
-  "barber_account": "حساب باربر",
   "Name": "الاسم الكامل",
   "Email": "البريد الإلكتروني",
   "UserName": "اسم المستخدم",
@@ -82,25 +81,27 @@
   "fetch_cat": "اختر الفئة",
   "del_title": "هل تريد حذف هذا المنتج؟",
   "del_msg": "اضغط على نعم للحذف ...",
-  "duration": "Duration",
-  "PaddingTime": "Padding Time",
-  "LeadTime": "Lead Time",
-  "Interval": "Interval",
-  "canbecancel": "Cancelled at least",
-  "upload_image": "Upload Image",
-  "select": "Select",
-  "upload_txt": "Are you sure to upload this image ? ",
-  "order_dtl": "Order Detail",
-  "company": "Company",
-  "total": "Total",
-  "book_date": "Booking Date",
-  "duration": "Duration",
-  "time": "Time",
-  "my_cart": "MY CART",
-  "check_out": "CHECK OUT",
-  "empty_cart": "Empty Cart",
-  "my_order": "MY ORDER",
-  "remov_msg": "You want to remove this item from cart",
-  "canbecanceltext": "Check this box if appointment can be cancelled by the customer. A refund will not be sent automatically."
+  "duration": "المدة الزمنية",
+  "PaddingTime": "وقت الحشوة",
+  "LeadTime": "المهلة",
+  "Interval": "فترة",
+  "canbecancel": "تم الإلغاء على الأقل",
+  "upload_image": "تحميل الصور",
+  "select": "تحديد",
+  "upload_txt": "هل أنت متأكد من تحميل هذه الصورة؟",
+  "order_dtl": "تفاصيل الطلب",
+  "company": "شركة",
+  "total": "مجموع",
+  "book_date": "تاريخ الحجز",
+  "duration": "المدة الزمنية",
+  "time": "زمن",
+  "my_cart": "عربتي",
+  "check_out": "الدفع",
+  "empty_cart": "عربة فارغة",
+  "my_order": "طلبي",
+  "remov_msg": "تريد إزالة هذا العنصر من سلة التسوق",
+  "payment": "دفع",
+  "payment_msg": "الرجاء تحديد طريقة الدفع",
+  "canbecanceltext": "ضع علامة في هذا المربع إذا كان بإمكان العميل إلغاء الموعد. لن يتم إرسال المبلغ المسترد تلقائيًا."
 
 }
