--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -71,15 +71,15 @@
   "al_account": "هل لديك حساب",
   "signin": "تسجيل الدخول . ",
   "gallery": "صالة عرض",
-  "add_product": "أضف منتج",
+  "add_product": "إضافة الخدمات",
   "back_shop": "العودة إلى المتجر",
-  "pro_name": "اسم المنتج",
-  "pro_price": "سعر المنتج",
+  "pro_name": "اسم الخدمة",
+  "pro_price": "سعر الخدمة",
   "des": "وصف",
   "srt_des": "وصف قصير",
-  "add_pro": "أضف منتج",
+  "add_pro": "أضف خدمات",
   "fetch_cat": "اختر الفئة",
-  "del_title": "هل تريد حذف هذا المنتج؟",
+  "del_title": "هل تريد حذف هذه الخدمة؟",
   "del_msg": "اضغط على نعم للحذف ...",
   "duration": "المدة الزمنية",
   "PaddingTime": "وقت الحشوة",
@@ -102,21 +102,21 @@
   "remov_msg": "تريد إزالة هذا العنصر من سلة التسوق",
   "payment": "دفع",
   "payment_msg": "الرجاء تحديد طريقة الدفع",
-  "some_error": "Something went wrong",
-  "enternet": "Enternet error",
-  "Appoint_dtl": "Appointment Detail",
-  "st_date": "Start Date",
-  "st_time": "Start Time",
-  "end_time": "End Time",
-  "end_date": "End Date",
-  "status": "Status",
-  "cu_status": "Customer Status",
-  "cu_name": "Customer Name",
-  "o_date": "Order Date",
-  "o_id": "Order ID",
-  "my_order": "My Order",
-  "no_rec": "NO RECORD",
-  "date_msg": "Please select after appointment time from current time",
+  "some_error": "هناك خطأ ما",
+  "enternet": "خطأ في الإنترنت",
+  "Appoint_dtl": "تفاصيل الموعد",
+  "st_date": "تاريخ البدء",
+  "st_time": "وقت البدء",
+  "end_time": "وقت النهاية",
+  "end_date": "تاريخ الانتهاء",
+  "status": "الحالة",
+  "cu_status": "حالة العميل",
+  "cu_name": "اسم الزبون",
+  "o_date": "تاريخ الطلب",
+  "o_id": "رقم التعريف الخاص بالطلب",
+  "my_order": "طلبي",
+  "no_rec": "لا سجلات",
+  "date_msg": "الرجاء التحديد بعد وقت الموعد من الوقت الحالي",
   "canbecanceltext": "ضع علامة في هذا المربع إذا كان بإمكان العميل إلغاء الموعد. لن يتم إرسال المبلغ المسترد تلقائيًا."
 
 }
