--- a/i18n/en.json
+++ b/i18n/en.json
@@ -71,15 +71,15 @@
   "al_account": "Already have an account ",
   "signin": "Sign In . ",
   "gallery": "GALLERY",
-  "add_product": "ADD PRODUCT",
+  "add_product": "ADD SERVICES",
   "back_shop": "BACK TO SHOP",
-  "pro_name": "Product Name",
-  "pro_price": "Product Price",
+  "pro_name": "Service Name",
+  "pro_price": "Service Price",
   "des": "Description",
   "srt_des": "Short Description",
-  "add_pro": "Add Product",
+  "add_pro": "Add Services",
   "fetch_cat": "Select Category",
-  "del_title": "Do you want to delete this product?",
+  "del_title": "Do you want to delete this service?",
   "del_msg": "Press Yes to delete...",
   "duration": "Duration",
   "PaddingTime": "Padding Time",
