--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -6,7 +6,7 @@
   "english": "الإنجليزية",
   "barber_account":"حساب الحلاق",
   "barber_list": "قائمة الحلاق",
-  "Tapered": "مدبب",
+  "Tapered": "كتكك",
   "Barber_near": "بالقرب من الحانات",
   "my_acc": "حسابي",
   "my_app": "المواعيد الخاصة بي",
@@ -44,7 +44,7 @@
   "exit_msg": "هل تريد الخروج من التطبيق",
   "NO": "لا",
   "YES": "نعم",
-  "TAPERED_USER_NEAR": "المستخدمين المدبب بالقرب مني",
+  "TAPERED_USER_NEAR": "المستخدمون بالقرب مني",
   "SEARCH": "بحث",
   "Description": "وصف",
   "review": "مراجعة",
@@ -117,6 +117,7 @@
   "my_order": "طلبي",
   "no_rec": "لا سجلات",
   "date_msg": "الرجاء التحديد بعد وقت الموعد من الوقت الحالي",
+  "loading_msg": "Please Wait ....",
   "canbecanceltext": "ضع علامة في هذا المربع إذا كان بإمكان العميل إلغاء الموعد. لن يتم إرسال المبلغ المسترد تلقائيًا."
 
 }
