--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -118,6 +118,8 @@
   "no_rec": "لا سجلات",
   "date_msg": "الرجاء التحديد بعد وقت الموعد من الوقت الحالي",
   "loading_msg": "Please Wait ....",
+  "Earning": "EARNING",
+  "TEarning": "TOTAL EARNING",
   "canbecanceltext": "ضع علامة في هذا المربع إذا كان بإمكان العميل إلغاء الموعد. لن يتم إرسال المبلغ المسترد تلقائيًا."
 
 }
